2014-03-15  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Rename module opt_1_0 to just otp.

	* src/otp_1_0.h, src/otp.h: Renamed otp_1_0.h to otp.h.

	* src/otp_1_0.c, src/otp.c: Renamed otp_1_0.c to otp.c and adjust include
	accordingly.

	* src/ntp_11.c: Adjust include accordingly.

	* COPYING, src/CMakeLists.txt: Adjust module name accordingly.

2014-03-14  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Drop the version indicator for OTP as this does not make sense
	code-wise.

	* src/otp_1_0.h, src/otp_1_0.c, src/ntp_11.c: Replaced any "otp_1_0_"
	name by just "otp_".

2014-03-14  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Remove sending of PLUGINS_DEPENDENCIES sending upon client connect with
	protocol version 2.0.

	* src/ntp_11.c (qsort_cmp, _find_plugin, find_plugin)
	(ntp_1x_send_dependencies): Delete unused functions.

	* src/openvassd.c (handle_client): Do not send plugin dependencies in
	protocol version 2.0 case.

	* src/ntp_11.h: Remove deleted function prototype.

2014-03-14  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/openvassd.c (loading_handler_start): Set the sigterm signal
	callback to default for the forked child.
	(loading_handler_stop): Wait for the terminated child process.

2014-03-12  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Start the loading handler process when scanner is reloaded too.

	* src/openvassd.c (loading_client_handle, loading_handler_start)
	(loading_handler_stop): Move definitions up.
	(reload_openvassd): Start loading handler before reloading config and
	plugins and stop it after finishing.

2014-03-12  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 4.0+beta8.

2014-03-12  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-scanner 4.0+beta7 release.

	* CHANGES: Updated.

2014-03-12  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
